tests/snapshots/generator__duplicate_create_files@_bytes_1000_exact_1_10_1.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 10 where each directory contains approximately 1 other directory. Each file will contain approximately 1,000 bytes of random data totaling exactly 1000 bytes.
Created 2 files (1.0 kB) across 3 directories.

/0
/0.dir
/1
/0.dir/0.dir
/0.dir/0.dir/0.dir

0x544a462508ef4731
