tests/snapshots/generator__duplicate_create_files@_bytes_1000_exact_1_1_1.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 1 where each directory contains approximately 1 other directory. Each file will contain approximately 1,000 bytes of random data totaling exactly 1000 bytes.
Created 1 file (1.0 kB) across 2 directories.

/0
/0.dir
/1.dir

0x5744973d3b32c252
